feat: update environment variables for PostgreSQL configuration in production

--- a/.env.production
+++ b/.env.production
@@ -1,9 +1,7 @@
-# Example development environment variables
 APP_ENV=
-DB_HOST=
-DB_PORT=
-DB_USER=
-DB_PASSWORD=
-DB_NAME=
-JWT_SECRET=
+POSTGRES_HOST=
+POSTGRES_PORT=
+POSTGRES_USER=
+POSTGRES_PASSWORD=
+POSTGRES_DB=
 ALLOWED_ORIGINS=https://mindoh.wannadev.id.vn
