feat: update environment variables in .env.production and config.yaml; add docker-compose-db.yml for PostgreSQL setup

--- a/.env.production
+++ b/.env.production
@@ -1,7 +1,8 @@
-APP_ENV=
+APP_ENV=prod
 POSTGRES_HOST=
 POSTGRES_PORT=
 POSTGRES_USER=
 POSTGRES_PASSWORD=
-POSTGRES_DB=
+POSTGRES_NAME=
+JWT_SECRET=
 ALLOWED_ORIGINS=https://mindoh.wannadev.id.vn
