--- a/.env.production
+++ b/.env.production
@@ -6,3 +6,13 @@ POSTGRES_PASSWORD=
 POSTGRES_NAME=
 JWT_SECRET=
 ALLOWED_ORIGINS=https://mindoh.wannadev.id.vn
+
+# SMTP — leave SMTP_HOST empty to disable email sending (NoopMailer)
+SMTP_HOST=
+SMTP_PORT=587
+SMTP_USER=
+SMTP_PASSWORD=
+SMTP_FROM=
+
+# Frontend base URL used in email links (verify-email, reset-password)
+APP_URL=https://mindoh.wannadev.id.vn
