feat: migrate email sending to Brevo HTTP API; remove SMTP configuration and implement BrevoMailer for transactional emails

--- a/.env.production
+++ b/.env.production
@@ -7,12 +7,9 @@ POSTGRES_NAME=
 JWT_SECRET=
 ALLOWED_ORIGINS=https://mindoh.wannadev.id.vn
 
-# SMTP — leave SMTP_HOST empty to disable email sending (NoopMailer)
-SMTP_HOST=
-SMTP_PORT=587
-SMTP_USER=
-SMTP_PASSWORD=
-SMTP_FROM=
+# Brevo HTTP API — works everywhere (no SMTP port needed)
+BREVO_API_KEY=
+BREVO_FROM=
 
 # Frontend base URL used in email links (verify-email, reset-password)
 APP_URL=https://mindoh.wannadev.id.vn
