--- a/config.yaml
+++ b/config.yaml
@@ -7,11 +7,8 @@ db:
   name: ${POSTGRES_NAME}
 jwt:
   secret: ${JWT_SECRET}
-smtp:
-  host: ${SMTP_HOST}
-  port: ${SMTP_PORT}
-  username: ${SMTP_USER}
-  password: ${SMTP_PASSWORD}
-  from: ${SMTP_FROM}
+brevo:
+  api_key: ${BREVO_API_KEY}
+  from: ${BREVO_FROM}
 app:
   url: ${APP_URL}
